manifests/openframe/base/openframe-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openframe-gateway
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - openframe-gateway.192.168.100.100.nip.io
    secretName: openframe-gateway-tls-secret
  rules:
    - host: openframe-gateway.192.168.100.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openframe-gateway
                port:
                  name: http
